feat:add novas funções de validação

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -7,6 +7,35 @@ Cadastro
 
 {% block 'body' %}
 <div class="container">
+    {% if status == '1' %}
+    <div class="alert alert-danger" role="alert">
+        E-mail já cadastrado no sistema
+    </div>
+    {% endif %}
+
+    {% if status == '2' %}
+    <div class="alert alert-danger" role="alert">
+        Nome e Email não podem ser vazios
+    </div>
+    {% endif %}
+
+    {% if status == '3' %}
+    <div class="alert alert-danger" role="alert">
+        Senha deve conter no mínimo 8 caracteres
+    </div>
+    {% endif %}
+
+    {% if status == '4' %}
+    <div class="alert alert-danger" role="alert">
+        Erro interno do sistema
+    </div>
+    {% endif %}
+
+    {% if status == '0' %}
+    <div class="alert alert-success" role="alert">
+        Cadastro confirmado com sucesso
+    </div>
+    {% endif %}
     
     <div class="row">
     <div class="col-md-3">
@@ -16,7 +45,7 @@ Cadastro
         <br>
         <h1>Cadastre-se</h1>
         <hr>
-        <form method="POST" action="#">
+        <form method="POST" action="{% url 'valida_cadastro'%}">{% csrf_token %}
             <label>Digite seu nome:</label>
             <input class="form-control" type="text" placeholder="Nome..." name = "nome">
             <br>
