--- a/cursos/templates/curso.html
+++ b/cursos/templates/curso.html
@@ -24,7 +24,7 @@ Curso
                 <div class="card-body">
                 <h5 class="card-title">{{i.nome}}</h5>
                 <p class="card-text">{{i.descricao}}</p>
-                <a href="{% url 'aula' i.id%}" class="btn btn-primary">Acessar</a>7
+                <a href="{% url 'aula' i.id%}" class="btn btn-primary">Acessar</a>
                 </div>
             </div>
         </div>
