--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="pt-BR">
     <head>
+    <style>
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
@@ -9,8 +11,7 @@
     </head>
     <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">&nbsp&nbspPythonando</a>
-        
+        <a class="navbar-brand" href="{% url 'home' %}">&nbsp&nbspPythonando</a>
     </nav>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" ></script>
