--- a/cursos/templates/aula.html
+++ b/cursos/templates/aula.html
@@ -169,40 +169,41 @@ Aula
     </div>
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script>
-function envia_comentario(){
-    comentario = document.getElementById('comentario').value
-    document.getElementById('comentario').value = ""
-    
-<!-- envia dados sem o forms-->    
-    $.ajax({ 
-                url: "{% url 'comentarios'%}",
-                method: 'post',
-                data: {
-                    'csrfmiddlewaretoken': '{{ csrf_token }}',
-                    'aula_id': "{{aula.id}}",
-                    'usuario_id': "{{usuario_id}}",
-                    'comentario': comentario
-                },
-                success: function(resposta){
-                resposta = JSON.parse(resposta)
-                if(resposta['status'] == "1"){
-                    div_comentario = document.getElementById('comentarios')
-                    div_comentario.innerHTML = ""
-                    for(i=0; i < resposta['comentarios'].length; i++){
-                        console.log('teste')
-                        div_comentario.innerHTML += '<div style="background-color: red; width: 30px; height: 30px; border-radius: 15px; display: inline-block;"></div>'
-                        div_comentario.innerHTML += '<h5 style="display: inline;">'+ resposta['comentarios'][i][0] +'</h5>'
-                        div_comentario.innerHTML += '<p style="margin-left: 50px;">' + resposta['comentarios'][i][1] + '</p>'
-                        div_comentario.innerHTML += '<hr>'
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script>
+    function envia_comentario(){
+        comentario = document.getElementById('comentario').value
+        document.getElementById('comentario').value = ""
+        
+    <!-- envia dados sem o forms-->    
+        $.ajax({ 
+                    url: "{% url 'comentarios'%}",
+                    method: 'post',
+                    data: {
+                        'csrfmiddlewaretoken': '{{ csrf_token }}',
+                        'aula_id': "{{aula.id}}",
+                        'usuario_id': "{{usuario_id}}",
+                        'comentario': comentario
+                    },
+                    success: function(resposta){
+                    resposta = JSON.parse(resposta)
+                    if(resposta['status'] == "1"){
+                        div_comentario = document.getElementById('comentarios')
+                        div_comentario.innerHTML = ""
+                        for(i=0; i < resposta['comentarios'].length; i++){
+                            console.log('teste')
+                            div_comentario.innerHTML += '<div style="background-color: red; width: 30px; height: 30px; border-radius: 15px; display: inline-block;"></div>'
+                            div_comentario.innerHTML += '<h5 style="display: inline;">'+ resposta['comentarios'][i][0] +'</h5>'
+                            div_comentario.innerHTML += '<p style="margin-left: 50px;">' + resposta['comentarios'][i][1] + '</p>'
+                            div_comentario.innerHTML += '<hr>'
+
+                        }
+                    }
 
                     }
-                }
 
-                }
-
-            })
-}
-</script>
+                })
+    }
+    </script>
+</div class="container">
 {% endblock %}
